Rejiggering map to use Leaflet.js and MapBox and all the associated changes with that. Changed layout of Counties page to do everything in modals instead of table below.  Preparing a manual add page for ADA.

--- a/CovidTrackUS_Web.csproj
+++ b/CovidTrackUS_Web.csproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="CovidTrackUS_Core\CovidTrackUS_Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\kml\" />
+  </ItemGroup>
+
 </Project>
