--- a/SPA/package.json
+++ b/SPA/package.json
@@ -27,8 +27,13 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.9",
     "@amcharts/amcharts4-geodata": "^4.1.18",
+    "@turf/centroid": "^6.0.2",
     "axios": "^0.19.2",
+    "leaflet": "^1.7.1",
+    "leaflet-spin": "^1.1.2",
+    "mapbox-gl": "^2.0.0",
     "promise.prototype.finally": "^3.1.2",
+    "spin.js": "^4.1.0",
     "vue": "^2.6.11",
     "vue-js-popover": "^1.2.1",
     "vue-router": "^3.2.0",
