--- a/SPA/package.json
+++ b/SPA/package.json
@@ -35,6 +35,7 @@
     "promise.prototype.finally": "^3.1.2",
     "spin.js": "^4.1.0",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-js-popover": "^1.2.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.16"
