--- a/SPA/package.json
+++ b/SPA/package.json
@@ -38,6 +38,7 @@
     "vue-analytics": "^5.22.1",
     "vue-js-popover": "^1.2.1",
     "vue-router": "^3.2.0",
+    "vue-scrollto": "^2.20.0",
     "vuetify": "^2.3.16"
   },
   "devDependencies": {
