Rounding display error was eliminating the negative qualifier from trend displays. Fixing .net AssemblyInfo issues.

--- a/CovidTrackUS_Web.csproj
+++ b/CovidTrackUS_Web.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>CovidTrackUS</RootNamespace>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UserSecretsId>84f2796e-a83f-4ec9-8954-fe18300db6ff</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
